# execution-intelligence-platform

./: .gitignore  README.md
configs/: dev.yaml
cpp_engine/: CMakeLists.txt
cpp_engine/include/: bounded_queue.hpp  config.hpp  consumer.hpp  dummy_feed.hpp  events.hpp  jsonl_logger.hpp  session.hpp  time_utils.hpp
cpp_engine/src/: config.cpp  consumer.cpp  dummy_feed.cpp  jsonl_logger.cpp  main.cpp  session.cpp  time_utils.cpp
scripts/: build_cpp.sh
